--- a/facts/styles/facts.css
+++ b/facts/styles/facts.css
@@ -148,7 +148,7 @@
     flex: 0 0 auto;
     padding: 10px;
     border-radius: 8px;
-    background-color: rgba(255, 215, 0, 0.15); /* Легкий жовтий відтінок */
+    background-color: rgba(255, 215, 0, 0.3); /* Виразніший жовтий відтінок */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 
